@@ -100,6 +100,8 @@ NOTE: sorry, this is very raw :)
  
 * copy/paste not supported in controller mode (or at least disable them!)
  
++ some imported midis have an empty track 0 (linkin park - faint.mid)
+ 
 + scons warning : 'install' is found inside 'uninstall' (fix commited, not tested)
 
 + when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
