@@ -2,6 +2,8 @@
 - Made note beaming wiser about how it selects which notes to beam toghether
 - When importing midi, remove events from unsupported controllers (fixes some playback bugs)
 - Added more midi controllers
+- Fixed zooming in songs with multiple time signatures
+- Made zooming smoother by removing unneeded render
  
  1.1b6
 - fixed crash when removing tempo events
